Adding menu button and hidding navbar

--- a/blog.html
+++ b/blog.html
@@ -21,8 +21,19 @@
           <li class="menu-item"><a href="#platform">Customers</a></li>
           <li class="menu-item"><a href="#platform">Resources</a></li>
           <li class="menu-item"><a href="#platform">About</a></li>
-        </ul>
+        </ul> 
       </nav>
+      <button class="hidden-menu"> 
+        Menu
+        <!--<ul>
+          <li class="menu-item"><a href="#platform">Platform</a></li>
+          <li class="menu-item"><a href="#platform">Pricing</a></li>
+          <li class="menu-item"><a href="#platform">Customers</a></li>
+          <li class="menu-item"><a href="#platform">Resources</a></li>
+          <li class="menu-item"><a href="#platform">About</a></li>
+        </ul> -->
+
+      </button>
       <div class="actions">
         <a>Sign In</a>
         <button>Start free trial</button>
